# arcane-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ROADMAP.md  rules.md
examples/clean/: PKGBUILD
examples/dotfiles/: install.sh  setup.sh
examples/risky/: PKGBUILD  hello-risky.install
examples/scripts/: clean-install.sh  risky-install.sh
src/arcane_guard/: aur.py  scanner.py  script.py  themes.py
src/arcane_studio/: aur.py  cli.py  directory.py  scanner.py  script.py  themes.py
src/arcane_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_guard.py
